# game_bot

./: .env-example  .gitignore  Makefile  Readme.md  config_example.yml  docker-compose.yml  pyproject.toml  requirements.txt
migration/: env.py
migration/versions/: 2025012915_initial.py  4af3f4b3f819_initial.py
rabbitmq_docker/: Dockerfile
service/: __main__.py  config.py  dataclasses.py  utils.py
service/bot/: dataclasses.py  managers.py  utils.py
service/db_setup/: db_connector.py  db_settings.py  models.py
service/endpoints/: data_handlers.py  put_handlers.py  update_handlers.py
service/game/: accessors.py  exceptions.py  managers.py  schemes.py
service/rabbitmq_service/: accessor.py
service/vk_api/: accessor.py  btn_creator.py  dataclasses.py  poller.py  worker.py
tests/: config_example_test.yml  conftest.py
tests/fixtures/: __init__.py  bot.py  game.py
tests/test_game/: lst_sql.py  test_endpoints.py
